--- a/main.css
+++ b/main.css
@@ -2,22 +2,26 @@
   text-align: justify;
 }
 
-.container{
-  margin-top: 5px;
-}
 
 .navbar{
-  border-radius: 5px;
-  margin-top: 0px;
+  border-radius: 2px;
+  margin: 0 auto;
 }
 
 .sticky {
-  position: top;
   position: fixed;
-  position: center;
 }
 
 .sticky + .content {
+  padding-top: 55px;
+}
 
+.header0px{
+  width: 0%;
+  height: 0px;
+}
 
+header{
+  width: 100%;
+  height: 1px;
 }
