--- a/main.css
+++ b/main.css
@@ -17,10 +17,40 @@ tr{
   width: auto;
 }
 
+
 footer p{
   text-align: center;
   padding: 10px;
   margin: auto;
+}
+
+#contenedor-total {
+  position: relative;
+  min-height: 100vh;
+}
+
+
+
+#footer{  
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.card-header {
+  padding: .75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgba(0,0,0,.03);
+  border-bottom: 1px solid rgba(0,0,0,.125);
+}
+
+.card-body {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem;
 }
 
 /*
