--- a/main.css
+++ b/main.css
@@ -38,19 +38,19 @@ tr{
   margin-bottom: 3em;
 }
 
-#footer{  
+/* #footer{  
   position: absolute;
   bottom: 0;
   width: 100%;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   height: 3em;
-}
+} */
 
 footer p{
   text-align: center;
   padding: 10px;
-  margin: auto;
+  /* margin: auto; */
 }
 
 .card-header {
